# decision-assistant-ao-niiit

./: .gitignore  README.md  main.py  main_basic.py  main_common.py  main_distribute.py  main_military.py  pyproject.toml  requirements.txt
jupyter_sketches/: fit_ssr.ipynb  tsn_ssr.ipynb
manual/: manual_broken_stick.py  manual_correlated.py  manual_fix_corr_cholesky.py  manual_gradient.py  manual_last_occurence.py  manual_matrix_correlated.py  manual_mpl_bledge.py  manual_mpl_density.py  manual_mpl_schematic.py  manual_plot_limited.py  manual_plot_quasi_efficient_frontier.py  manual_read.py  manual_shooting_correlated.py  manual_tactical_solver.py  manual_versions.py  manual_write.py  maual_polyval.py
manual/disser/: boris_elena.py  boris_elena_corr.py  boris_elena_full.py  boris_elena_monte_carlo.py  corr_matrix_quasi_efficient_frontier.py  fragmented_solution_field.py  huge_quasi_efficient_frontier.py  lrfuzzy-crisp-approx.py  lrfuzzy-full-approx.py  lrfuzzy.py  max_dist.py  one_parabola.py  steps.py  stochastic.py  touch_parabola.py
src/: main.py
src/algebra/: __init__.py  corr.py
src/common/: __init__.py
src/fit_ssr/: __init__.py  bare_numbers.py  oop.py
src/fuzzy/: __init__.py
src/geometry/: __init__.py
src/io/: __init__.py
src/lang/: __init__.py
src/mpl_corr/: __init__.py  matrix_correlation.py  single_correlation.py
src/mpl_main/: __init__.py  figparams.py
src/mpl_shares/: __init__.py
test/: test_adjust_corrmatr.py  test_fuzzy.py  test_np_interp.py  test_probability.py  test_scipy_norm.py  test_square_root.py  test_undoredo.py
(+31 files in other folders)
