[tool.poetry]
name = "decision-assistant-ao-niiit"
version = "0.1.0"
description = ""
authors = ["ex9000 <ex9000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flet = "^0.22.0"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
numpy = "^1.26.4"
pillow = "^10.3.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
pytest = "^8.2.2"
flet-multi-page = "^1.3.1"
openpyxl = "^3.1.3"
pyinstaller = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
